Revision de imagenes

--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
                   
                 </div>
               </div>
+              <div class="row">
+                <div class="col-xs-12 col-md-12 col-lg-12">
+                  <div class="botones">
+                    <a href="" class="btn btn-primary">Descargar PDF</a>
+                  </div>
+                </div>
+              </div>
 
             </div>
         </div>
