--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                       <div class="col-xs-12 col-md-6 col-lg-6">
                           <h3 style="text-align: center">Acerca de m&iacute;</h3>
-                          Hola!, soy Josue Barrios Rodriguez, dearrollador de plataformas web, y moviles.
+                          Hola!, soy Josue Barrios Rodriguez, desarrollador de plataformas web, y moviles.
                           Actualmente tengo mas de 10 años de experiencia desarrollando para plataformas web utilizando lenguajes BackEnd como Java, .NET (C#) y Python (Django). Adicionalmente he trabajado creando soluciones moviles para clientes que buscaban llegar a una poblacion cada vez creciente; estas soluciones fueron implementadas tanto en Android nativo como con React-native
                         </div>
                         <div class="col-xs-12 col-md-6 col-lg-6">
