cambio de ciudad

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                   </tr>
                                   <tr>
                                     <td>DIRECCION</td>
-                                    <td>Bucaramanga, Santander, Colombia</td>
+                                    <td>Medell&iacuten, Antioquia, Colombia</td>
                                   </tr>
                                   <tr>
                                     <td>IDIOMAS</td>
