correccion url experiencia

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                 <div class="col-xs-6 col-lg-6 col-md-6">
                                     <strong>Misión del Cargo:</strong> Desarrollador Senior encargado de aplicar correcciones y nuevas caracteristicas a la plataforma de solicitud de creditos rapidos Rapcredit. Lider técnico: Encargado de liderar los desarrollos del equipo de trabajo orientado a brindar la mejor experiencia de usuario, <br>
                                     <strong>Logros:</strong> Implementacion de arquitectura propietaria de BPM y flujos basados en bases de datos. Restructuracion y unificacion de plataformas segun los productos de la compañia. Creaci&oacute;n de nuevos productos. <br>
-                                    <strong>URL:</strong> <a target="_blank" href="https://www.yesynergy.com">Yesynergy.com</a>
+                                    <strong>URL:</strong> <a target="_blank" href="https://www.rapicredit.com">Rapicredit</a>
                                 </div>
                               </div>
                             </div>
